--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-徐展鹏，你爸爸喜欢你
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<h1>徐展鹏</h1>
+<p>大哥徐展鹏</p>
+<P>人狠话不多</P>
+
+</body>
+</html>
