--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>可爱</title>
 </head>
 <body>
-<h1>刘元哲表白徐展鹏</h1>
-<p>大哥徐展鹏</p>
+<h1>就是可爱</h1>
+<p>宇宙超级无敌大可爱</p>
 <P>人狠话不多</P>
 
 </body>
