--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>可爱</title>
 </head>
 <body>
-<img src="QQ图片20190711000141"/>
+<img src="QQ图片20190711000141.jpg"/>
 <h1>就是可爱</h1>
 <p>宇宙超级无敌大可爱</p>
 <P>人狠话不多</P>
