--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>可爱</title>
+    <title>婴婴翔生日快乐</title>
 </head>
 <body>
 <img  src="QQ图片20190711000141.jpg"/>
