--- a/001basics/test.html
+++ b/001basics/test.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>可爱</title>
+</head>
+<body>
+<img  src="./images/QQ图片20190711000141.jpg"/>
+<h1>就是可爱</h1>
+<p>宇宙超级无敌大可爱</p>
+<P>人狠话不多</P>
+
+</body>
+</html>
